@@ -19,8 +19,8 @@ typedef struct {
 } master_test_t;
 
 static master_test_t master_tests[] = {
-  { "Simple Tests",   8, CK_FAILURE, "Failure expected" },
-  { "Simple Tests",  14, CK_ERROR,   "Early exit with return value 1" },
+  { "Simple Tests",  11, CK_FAILURE, "Failure expected" },
+  { "Simple Tests",  17, CK_ERROR,   "Early exit with return value 1" },
   { "Simple Tests",  -1, CK_PASS,    "Passed" },
   { "Simple Tests",  -1, CK_FAILURE, "This test should fail" },
   { "Simple Tests",  -1, CK_PASS,    "Passed" },
@@ -35,11 +35,23 @@ static master_test_t master_tests[] = {
   { "Simple Tests",  -1, CK_FAILURE, "Failed" },
   { "Signal Tests",  -1, CK_ERROR,   "Received signal 11" },
   { "Signal Tests",  -1, CK_PASS,    "Passed" },
-  { "Signal Tests", 101, CK_ERROR,   "Error: Received signal 11, expected 8" },
+  { "Signal Tests", 104, CK_ERROR,   "Error: Received signal 11, expected 8" },
   { "Signal Tests",  -1, CK_FAILURE, "Early exit with return value 0" },
   { "Signal Tests",  -1, CK_FAILURE, "Early exit with return value 1" },
   { "Signal Tests",  -1, CK_ERROR,   "Received signal 8" },
   { "Signal Tests",  -1, CK_ERROR,   "Received signal 8" },
+  { "Timeout Tests", 132, CK_ERROR,  "Received signal 9" },
+  { "Timeout Tests",  -1, CK_PASS,   "Passed" },
+  { "Timeout Tests", 145, CK_ERROR,  "Received signal 9" },
+  { "Timeout Tests", 151, CK_ERROR,  "Received signal 9" },
+  { "Extended Timeout Tests", 132, CK_ERROR,  "Received signal 9" },
+  { "Extended Timeout Tests",  -1, CK_PASS,   "Passed" },
+  { "Extended Timeout Tests",  -1, CK_PASS,   "Passed" },
+  { "Extended Timeout Tests", 151, CK_ERROR,  "Received signal 9" },
+  { "Timeout Tests", 132, CK_ERROR,  "Received signal 9" },
+  { "Timeout Tests",  -1, CK_PASS,   "Passed" },
+  { "Timeout Tests", 145, CK_ERROR,  "Received signal 9" },
+  { "Timeout Tests", 151, CK_ERROR,  "Received signal 9" },
   { "Limit Tests",   -1, CK_ERROR,   "Early exit with return value 1" },
   { "Limit Tests",   -1, CK_FAILURE, "Completed properly" },
   { "Limit Tests",   -1, CK_FAILURE, "Completed properly" },
